--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -16,6 +16,8 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        lfs: true
 
     - name: Azure CLI - Upload Files
       uses: azure/CLI@v1
