--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,21 @@
 {
-  "appPort": 3000,
+	"appPort": 3000,
 
-  "extensions": [
-  ],
+	"extensions": [
+		"dbaeumer.vscode-eslint"
+	],
 
-  "settings": {
-  },
+	"settings": {
+		"terminal.integrated.shell.linux": "/bin/bash"
+	},
 
-  // Run Bash script in .devcontainer directory
-  "postCreateCommand": "/bin/bash ./.devcontainer/post-create.sh > ~/post-create.log",
+	// Run Bash script in .devcontainer directory
+	"postCreateCommand": "/bin/bash ./.devcontainer/post-create.sh > ~/post-create.log",
+
+	"build": {
+		"dockerfile": "Dockerfile",
+		"args": {
+			"VARIANT": "14"
+		}
+	},
 }
